# openkylin-faqyh

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml  deb.yml  sync.yml
debian/: changelog  control  copyright  rules
include/: formatter.hpp  hwinfo.hpp  logger.hpp  main.hpp  terminalscreen.hpp
src/: formatter.cpp  hwinfo.cpp  logger.cpp  main.cpp  terminalscreen.cpp
